# warhammer40k-simulator

./: .gitignore  CLAUDE.md  CONTEXT.md  LICENSE  README.md  pyproject.toml
.claude/agents/: rules-researcher.md
.claude/skills/add-scenario/: SKILL.md
.claude/skills/add-unit/: SKILL.md
.github/workflows/: ci.yml
docs/adr/: 0001-shooting-pipeline-returns-teachable-record.md  0002-keyword-abilities-as-per-step-hooks.md  0003-saving-throws-and-the-dice-primitive.md  0004-target-11th-edition.md  0005-engine-owns-state-frozen-boundaries.md  0006-fight-phase-engine-owned-alternation.md  0007-grid-scale-chebyshev-distances.md
docs/design/: fight-phase.md  movement-and-charges.md  shooting-pipeline.md
src/wh40k_tutorial/: __init__.py  cli.py  engine.py  narrator.py
src/wh40k_tutorial/core/: __init__.py  abilities.py  combat.py  dice.py  expected.py  models.py  scenario.py
src/wh40k_tutorial/data/factions/: adeptus_mechanicus.json  necrons.json  orks.json  space_marines.json  tau_empire.json  tyranids.json
src/wh40k_tutorial/data/scenarios/: 01_first_shots.json  02_tougher_targets.json  03_piercing_armour.json  04_lethal_hits.json  05_sustained_hits.json  06_return_fire.json  (+3 more)
src/wh40k_tutorial/strategies/: __init__.py  base.py  heuristic.py  human.py  scripted.py
src/wh40k_tutorial/ui/: __init__.py  demo.py  live.py  shell.py
tests/: test_abilities.py  test_cli.py  test_combat.py  test_datasheets.py  test_dice.py  test_dice_values.py  test_engine.py  test_expected.py  test_heuristic.py  test_narrator.py  test_scenario.py  test_strategies.py  test_ui.py
