[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "wh40k-tutorial"
version = "0.1.0"
description = "An interactive terminal tutorial for learning Warhammer 40,000 (10th edition)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "ZhiKaanZhi" }]
dependencies = [
    "rich>=13.7",
    "click>=8.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "ruff>=0.6",
]

[project.scripts]
wh40k = "wh40k_tutorial.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
wh40k_tutorial = ["data/factions/*.json", "data/scenarios/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
